hw-03/answer_exercise_1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-server 
  template:
    metadata:
      name: nginx
      labels:
        app: nginx-server
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.4
        resources:
          requests:
            memory: "128Mi"
            cpu: "20m"
          limits:
            memory: "128Mi"
            cpu: "20m"
        ports:
        - containerPort: 80
